pre deploy changes

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,8 +25,9 @@
                 </div>
 
                 <div class="dropdown-content">
+                    <a href="{{ url_for('pomodoro.index') }}">Home</a>
                     <a href="{{ url_for('dreams.dreams') }}">Edit dreams</a>
-                    <a href="{{ url_for('statistic.statistic') }}">Statistics</a>
+                    <a href="{{ url_for('main.index') }}">Statistics</a>
                     <a href="{{ url_for('auth.logout') }}">Logout</a>
                     # if g.user.is_authenticated and g.user.is_admin()
                     <a href="{{ url_for('admin.admin') }}">Admin panel</a>
